# BlazeTorch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  register.cc  setup.py  test.py
blazetorch/: __init__.py  blazetorch_compiler.cc  blazetorch_compiler.h  compiler.cc  compiler.h  fuse_candidates.cc  fuse_candidates.h  process_graph_ops.cc  process_graph_ops.h  py_blazetorch.py  register.cc  trace_utils.h
blazetorch/fusion_passes/: fusion_adddiv.cc  fusion_adddiv.h  fusion_addmul.cc  fusion_addmul.h
tests/: list_aten_ops.py  run_bert.py  run_llama.py  supported_methods.py
